# shakki-ai

./: README.md  pyproject.toml
docs/: maarittelydokumentti.md  viikkoraportti1.md  viikkoraportti2.md
src/shakki_ai/: ai.py  board.py  cli.py
