[tool.poetry]
name = "shakki-ai"
version = "0.1.0"
description = ""
authors = ["saraayy <128136969+saraayy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


packages = [{ include = "shakki_ai", from = "src" }]

[tool.poetry.scripts]
shakki = "shakki_ai.cli:main"